tests/files/flow_controller_tests/should_run/085.cmdr
x = 2;
print csch(x);