tests/files/flow_controller_tests/should_fail/069.cmdr
x = false;
print csch(x);